[package]
name = "biars"
version = "0.1.0"
authors = ["m3y <ma3ya.ozw+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.2"
exitcode = "1.1.2"
kube = "0.42.0"
kube-runtime = "0.42.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
tokio = { version = "0.2.22", features = ["full"] }
